--- a/couphone/app/src/main/res/layout/fragment_search.xml
+++ b/couphone/app/src/main/res/layout/fragment_search.xml
@@ -7,45 +7,93 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <EditText
-        android:id="@+id/searchBar"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20dp"
-        android:hint="지갑 속에서 헤매지 말고 쿠폰에서 검색!"
-        android:textSize="14sp"
-        android:fontFamily="@font/line_seed_sans_bold"
-        android:background="@drawable/search_tab_green"
+    <ImageButton
+        android:id="@+id/back_iv"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/left_arrow_double"
+        android:background="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/search_fl"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:id="@+id/latest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="키워드로 매장을 검색해보세요."
+        android:fontFamily="@font/tway_fly"
+        android:textColor="#090909"
+        android:textSize="23sp"
+        app:layout_constraintStart_toEndOf="@id/back_iv"
+        app:layout_constraintTop_toTopOf="@id/back_iv"
+        android:layout_marginTop="13dp"/>
+
+
+    <FrameLayout
+        android:id="@+id/search_fl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/search_tab_green"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:imeOptions="actionDone"
-        android:inputType="text"/>
+        app:layout_constraintTop_toBottomOf="@id/back_iv">
 
-  <ImageButton
-        android:id="@+id/submit_btn"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/search_arrow"
-        app:layout_constraintEnd_toEndOf="@id/searchBar"
-        app:layout_constraintTop_toTopOf="@id/searchBar"/>
+        <ImageView
+            android:id="@+id/search_iv"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginLeft="14dp"
+            android:src="@drawable/magnify_logo"
+            android:layout_gravity="center_vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/submit_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/search_arrow"
+            android:background="@color/white"
+            android:layout_gravity="right"
+            android:layout_marginTop="9dp"
+            android:layout_marginRight="15dp"/>
+
+        <EditText
+            android:id="@+id/search_et"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:textColor="@color/textgray"
+            android:textSize="14sp"
+            android:fontFamily="@font/lineseedkr_bd"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:hint=""/>
+
+    </FrameLayout>
 
     <View
-        app:layout_constraintTop_toTopOf="@id/recyclerView_list"
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/black"/>
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@id/search_fl"
+        android:layout_marginTop="15dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar"
+        app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="15dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
