--- a/couphone/app/src/main/res/layout/item_search.xml
+++ b/couphone/app/src/main/res/layout/item_search.xml
@@ -1,46 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="start">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/item_cl"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/storename_tv"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_weight="1"
+        android:layout_margin="5dp"
+        android:padding="15dp"
+        android:textSize="12sp"/>
 
-        <TextView
-            android:id="@+id/word"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="10dp"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageButton
+        android:id="@+id/delete_btn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/delete"
+        android:background="@color/white"
+        android:layout_marginTop="8dp"/>
 
-        <ImageView
-            android:id="@+id/search_btn"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginRight="25dp"
-            android:src="@drawable/search_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <View
-        app:layout_constraintTop_toBottomOf="@id/item_cl"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"/>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
