--- a/couphone/app/src/main/res/layout/activity_register.xml
+++ b/couphone/app/src/main/res/layout/activity_register.xml
@@ -15,13 +15,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="40dp"/>
     
-    <TextView
+    <ImageView
         android:id="@+id/register_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="couphone"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:src="@drawable/logo_text_green"
         android:textSize="38sp"
         android:textColor="@color/green"
         android:fontFamily="@font/tway_fly"
