--- a/couphone/app/src/main/res/layout/fragment_my_coupon.xml
+++ b/couphone/app/src/main/res/layout/fragment_my_coupon.xml
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="최근 방문한 매장"
+        android:text="많이 방문한 매장"
         android:textSize="20sp"
         android:textColor="@color/black"
         android:fontFamily="@font/line_seed_sans_bold"
@@ -77,7 +77,7 @@
     <ImageView
         android:id="@+id/recent_coupon_background"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="178dp"
         android:src="@drawable/couphone_background"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -343,7 +343,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
-        android:text="많이 방문한 순서대로 볼 수 있어요"
+        android:text="최근 방문한 순서대로 볼 수 있어요"
         android:textSize="15sp"
         android:textColor="@color/deep_gray"
         android:fontFamily="@font/line_seed_sans"
@@ -353,7 +353,7 @@
     <ImageView
         android:id="@+id/recent_coupon_background2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="178dp"
         android:src="@drawable/couphone_background"
         android:layout_marginTop="15dp"
         app:layout_constraintStart_toStartOf="parent"
