--- a/couphone/app/src/main/res/layout/activity_login.xml
+++ b/couphone/app/src/main/res/layout/activity_login.xml
@@ -17,20 +17,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="230dp" />
+        android:layout_marginTop="160dp" />
 
-    <TextView
+    <ImageView
         android:id="@+id/couphone_logo_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="couphone"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:src="@drawable/logo_text_green"
         app:layout_constraintTop_toBottomOf="@id/main_logo_iv"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        android:fontFamily="@font/tway_fly"
-        android:textColor="@color/green"
-        android:textSize="50sp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogin"
@@ -38,7 +34,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/register_button"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:text="로그인"
+        android:text="카카오 계정으로 로그인"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
