--- a/couphone/app/src/main/res/layout/item_store.xml
+++ b/couphone/app/src/main/res/layout/item_store.xml
@@ -4,13 +4,16 @@
     android:id="@+id/item_webtoon_cl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="4dp"
-    >
+    android:layout_marginVertical="4dp">
+
     <ImageView
         android:id="@+id/background_iv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/couphone_background"/>
+
     <ImageView
         android:id="@+id/category_img_iv"
         android:layout_width="100dp"
@@ -27,6 +30,7 @@
         app:layout_constraintStart_toEndOf="@id/category_img_iv"
         app:layout_constraintTop_toTopOf="@id/category_img_iv"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="3dp"
         android:src="@drawable/couphone_count_box"/>
     <ImageView
         android:id="@+id/couphone_dday_background_iv"
@@ -40,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="70dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toTopOf="@id/category_img_iv"
         android:src="@drawable/down_arrow"/>
