--- a/couphone/app/src/main/res/layout/fragment_category.xml
+++ b/couphone/app/src/main/res/layout/fragment_category.xml
@@ -63,6 +63,7 @@
         app:layout_constraintTop_toBottomOf="@id/search_top_tv">
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginHorizontal="10dp"
@@ -74,6 +75,7 @@
             app:tabIndicatorHeight="0dp" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:background="@drawable/filter_btn_background"
@@ -84,6 +86,7 @@
             app:tabIndicatorHeight="0dp" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginHorizontal="10dp"
